antonio_gamez/session-02/exercise-01/resources/netpol/deny-netpol.yaml
############################ # ############################
## Bitnami K8S training
## session01/exercise02
#
## Author: Antonio Gamez-Diaz
## Contact: antoniogamez@us.es
#
# File: NetworkPolicy to deny all connections
# Purpose: denies all connections between pods
############################ # ############################
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: s02-exercise-01
spec:
  podSelector: {}
  policyTypes:
  - Ingress
